--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using Ejercicio4.EF.WebApi.Areas.HelpPage
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.Models
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
