--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.ModelDescriptions
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.ModelDescriptions
 @model EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
