--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.ModelDescriptions
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
 
 @if (Model.Count > 0)
