--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.Models
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
