--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/DictionaryModelDescription.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/DictionaryModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.ModelDescriptions
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.ModelDescriptions
 @model DictionaryModelDescription
 Dictionary of @Html.DisplayFor(m => Model.KeyModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.KeyModelDescription }) [key]
 and @Html.DisplayFor(m => Model.ValueModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.ValueModelDescription }) [value]
