--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.Models
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.ModelDescriptions
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.Models
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
