--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,4 @@
-@using Ejercicio4.EF.WebApi.Areas.HelpPage
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage
 @model ImageSample
 
 <img src="@Model.Src" />
