--- a/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/Ejercicio4.EF.WebApi/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using Ejercicio4.EF.WebApi.Areas.HelpPage.ModelDescriptions
+@using Ejercicio4.EF.WebAPI.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
